{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 220,
  "lineage": "6c5ee0f6-bffe-c68a-97a5-0565a3114ac0",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ecs_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:445567105184:loadbalancer/app/ecs-load-balancer/40028d617d3ee951",
            "arn_suffix": "app/ecs-load-balancer/40028d617d3ee951",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ecs-load-balancer-986906304.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-1:445567105184:loadbalancer/app/ecs-load-balancer/40028d617d3ee951",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ecs-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e3367695f0c64bf1"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-02101b3907f5ec285"
              },
              {
                "subnet_id": "subnet-0cb0b2e571fd62844"
              }
            ],
            "subnets": [
              "subnet-02101b3907f5ec285",
              "subnet-0cb0b2e571fd62844"
            ],
            "vpc_id": "vpc-090b2b8bc275d5634",
            "xff_header_processing_mode": "append",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.ecs_service_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-1:445567105184:listener/app/ecs-load-balancer/40028d617d3ee951/53584fe7f81bbe5f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:445567105184:targetgroup/ecs-target-group/68f121e5c5dc9332",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:445567105184:listener/app/ecs-load-balancer/40028d617d3ee951/53584fe7f81bbe5f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:445567105184:loadbalancer/app/ecs-load-balancer/40028d617d3ee951",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.ecs_lb",
            "aws_lb_target_group.ecs_tg",
            "aws_security_group.ecs_service_sg",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ecs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:445567105184:targetgroup/ecs-target-group/68f121e5c5dc9332",
            "arn_suffix": "targetgroup/ecs-target-group/68f121e5c5dc9332",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:445567105184:targetgroup/ecs-target-group/68f121e5c5dc9332",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ecs-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-090b2b8bc275d5634"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_service_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:445567105184:security-group/sg-0e3367695f0c64bf1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e3367695f0c64bf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250202104028474000000001",
            "name_prefix": "terraform-",
            "owner_id": "445567105184",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-090b2b8bc275d5634"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0895ca0b5c5b7f22f",
            "domain": "vpc",
            "id": "eipalloc-0895ca0b5c5b7f22f",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-54-241-113-209.us-west-1.compute.amazonaws.com",
            "public_ip": "54.241.113.209",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "task-vpc-us-west-1a"
            },
            "tags_all": {
              "Name": "task-vpc-us-west-1a"
            },
            "vpc": true
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0438ec745ac57a058",
            "domain": "vpc",
            "id": "eipalloc-0438ec745ac57a058",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-57-128-127.us-west-1.compute.amazonaws.com",
            "public_ip": "13.57.128.127",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "task-vpc-us-west-1c"
            },
            "tags_all": {
              "Name": "task-vpc-us-west-1c"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:445567105184:internet-gateway/igw-00043690de26f4367",
            "id": "igw-00043690de26f4367",
            "owner_id": "445567105184",
            "tags": {
              "Name": "task-vpc"
            },
            "tags_all": {
              "Name": "task-vpc"
            },
            "vpc_id": "vpc-090b2b8bc275d5634"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0895ca0b5c5b7f22f",
            "association_id": "eipassoc-040900969a757ced1",
            "connectivity_type": "public",
            "id": "nat-067ec5d04d1446db8",
            "network_interface_id": "eni-06ea8049b73132813",
            "private_ip": "10.0.1.8",
            "public_ip": "54.241.113.209",
            "subnet_id": "subnet-02101b3907f5ec285",
            "tags": {
              "Name": "task-vpc-us-west-1a"
            },
            "tags_all": {
              "Name": "task-vpc-us-west-1a"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0438ec745ac57a058",
            "association_id": "eipassoc-03cbfbd2c61b25e70",
            "connectivity_type": "public",
            "id": "nat-00f57b79ed9da1c82",
            "network_interface_id": "eni-0b2da8cb8daa4c944",
            "private_ip": "10.0.2.152",
            "public_ip": "13.57.128.127",
            "subnet_id": "subnet-0cb0b2e571fd62844",
            "tags": {
              "Name": "task-vpc-us-west-1c"
            },
            "tags_all": {
              "Name": "task-vpc-us-west-1c"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ee6620ca1de12d511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-067ec5d04d1446db8",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ee6620ca1de12d51",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-044b8d5acd61ca0841080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-00f57b79ed9da1c82",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-044b8d5acd61ca084",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00043690de26f4367",
            "id": "r-rtb-00770a5637f17440b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-00770a5637f17440b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:445567105184:route-table/rtb-0ee6620ca1de12d51",
            "id": "rtb-0ee6620ca1de12d51",
            "owner_id": "445567105184",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "task-vpc-private-us-west-1a"
            },
            "tags_all": {
              "Name": "task-vpc-private-us-west-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-090b2b8bc275d5634"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:445567105184:route-table/rtb-044b8d5acd61ca084",
            "id": "rtb-044b8d5acd61ca084",
            "owner_id": "445567105184",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "task-vpc-private-us-west-1c"
            },
            "tags_all": {
              "Name": "task-vpc-private-us-west-1c"
            },
            "timeouts": null,
            "vpc_id": "vpc-090b2b8bc275d5634"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:445567105184:route-table/rtb-00770a5637f17440b",
            "id": "rtb-00770a5637f17440b",
            "owner_id": "445567105184",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "task-vpc-public"
            },
            "tags_all": {
              "Name": "task-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-090b2b8bc275d5634"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d4e29ecc8007b90",
            "route_table_id": "rtb-0ee6620ca1de12d51",
            "subnet_id": "subnet-00833f81c8bcc3877"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0251b49a0b2efdae0",
            "route_table_id": "rtb-044b8d5acd61ca084",
            "subnet_id": "subnet-05ecde71781c50e72"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-017a20ea73e802cf7",
            "route_table_id": "rtb-00770a5637f17440b",
            "subnet_id": "subnet-02101b3907f5ec285"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d88aa6087b4eed35",
            "route_table_id": "rtb-00770a5637f17440b",
            "subnet_id": "subnet-0cb0b2e571fd62844"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:445567105184:subnet/subnet-00833f81c8bcc3877",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00833f81c8bcc3877",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445567105184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-vpc-private-us-west-1a"
            },
            "tags_all": {
              "Name": "task-vpc-private-us-west-1a"
            },
            "vpc_id": "vpc-090b2b8bc275d5634"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:445567105184:subnet/subnet-05ecde71781c50e72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ecde71781c50e72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "445567105184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-vpc-private-us-west-1c"
            },
            "tags_all": {
              "Name": "task-vpc-private-us-west-1c"
            },
            "vpc_id": "vpc-090b2b8bc275d5634"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:445567105184:subnet/subnet-02101b3907f5ec285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02101b3907f5ec285",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "445567105184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-vpc-public-us-west-1a"
            },
            "tags_all": {
              "Name": "task-vpc-public-us-west-1a"
            },
            "vpc_id": "vpc-090b2b8bc275d5634"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:445567105184:subnet/subnet-0cb0b2e571fd62844",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1c",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb0b2e571fd62844",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "445567105184",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "task-vpc-public-us-west-1c"
            },
            "tags_all": {
              "Name": "task-vpc-public-us-west-1c"
            },
            "vpc_id": "vpc-090b2b8bc275d5634"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:445567105184:vpc/vpc-090b2b8bc275d5634",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082cbafee6dc2e187",
            "default_route_table_id": "rtb-0be167019b4e13cd7",
            "default_security_group_id": "sg-0d6c5eea8ef468e34",
            "dhcp_options_id": "dopt-086f3bc0e4994455c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-090b2b8bc275d5634",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0be167019b4e13cd7",
            "owner_id": "445567105184",
            "tags": {
              "Name": "task-vpc"
            },
            "tags_all": {
              "Name": "task-vpc"
            }
          }
        }
      ]
    }
  ]
}